@@ -15,8 +15,7 @@ esac
 outfile="data/eval/tsv/curated-${type}-ovt-${cid}.tsv"
 mkdir -p data/eval/tsv
 
-MAVEN_OPTS="-XX:-UseParallelGC -XX:-UseConcMarkSweepGC" \
-	time mvn verify exec:java -Ptsvgs \
+time mvn verify exec:java -Ptsvgs \
 	-Dexec.args="data/eval/curated-${type}.tsv $outfile" \
 	-Dorg.slf4j.simpleLogger.log.cz.brmlab.yodaqa.analysis=debug \
 	$args 2>&1 | tee logs/curated-${type}-$(git rev-parse --short HEAD).log
